@@ -3,7 +3,7 @@
 
 pkgname=openoffice-base-beta
 pkgver=3.0_ooo300_m5 # =RC1
-pkgrel=1
+pkgrel=2
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=(i686 x86_64)
 #_OO_milestone=ooo300-m5
@@ -108,6 +108,7 @@ build() {
 	--prefix=/usr --exec-prefix=/usr\
 	--disable-ldap\
 	--with-lang="en-US"\
+	--with-dict=ALL\
 	--disable-gnome-vfs\
 	--disable-binfilter\
 	--disable-odk\
@@ -147,10 +148,8 @@ build() {
 	--with-system-zlib\
 	--with-system-openssl\
 	--without-fonts\
-	--without-myspell-dicts\
 	--without-afms\
 	--without-gpc\
-	--without-myspell-dicts\
 	--without-nas\
 	--without-stlport\
 	--with-jdk-home=${JAVA_HOME} \
@@ -167,6 +166,7 @@ build() {
 	 $EXTRAOPTS || return 1
 
 #	--disable-qadevooo\
+#	--without-myspell-dicts\
 
 	cd ..
 
@@ -215,10 +215,15 @@ build() {
 	ln -s ../../opt/openoffice/program/soffice soffice
 	ln -s ../../opt/openoffice/program/spadmin spadmin
 
+	# install more dictionaries from source tree
+	for i in `ls -1 ${srcdir}/src/dictionaries/unxlngx6.pro/bin/dict-??.oxt`; do
+	  install -Dm644 $i ${pkgdir}/opt/openoffice/share/extension/install/$i
+	done
+
 	# install shortcuts
 	mv ${pkgdir}/opt/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
 	cd ${pkgdir}/usr/share/applications
-	sed -i -e 's|Exec=openoffice.org3.0|Exec=/opt/openoffice/program/soffice|g' *.desktop
+	sed -i -e 's|Exec=openoffice.org3|Exec=/opt/openoffice/program/soffice|g' *.desktop
 	sed -i -e 's|Exec=/opt/openoffice/program/soffice-printeradmin|Exec=/opt/openoffice/program/spadmin|g' printeradmin.desktop
 	# fix exec commands in shortcuts for Xfce menu
 	sed -i -e 's|base %U|base|g' base.desktop
@@ -230,7 +235,7 @@ build() {
 	# remove quickstarter, we disabled it above
 	rm -rf ${pkgdir}/usr/share/applications/qstart.desktop
 	# fix icons in shortcuts
-	sed -i -e 's|Icon=openofficeorg30-|Icon=|g' *.desktop
+	sed -i -e 's|Icon=openofficeorg3-|Icon=|g' *.desktop
 	# add template desktop file
 	install -D -m644 ${srcdir}/template.desktop ${pkgdir}/usr/share/applications/template.desktop
 
@@ -257,12 +262,6 @@ build() {
 	# remove unecessary temp files if they exist 
 	rm -f  ${pkgdir}/opt/openoffice/program/root*.dat
 	rm -f  ${pkgdir}/opt/openoffice/program/root*.dat.*
-
- 	# fix font wizard not installed by default (from http://qa.openoffice.org/issues/show_bug.cgi?id=81102)
-	install -D -m644 ${srcdir}/FontOOo_1.7.1.sxw ${pkgdir}/opt/openoffice/share/dict/ooo/FontOOo.sxw
-
-	# add missing spell wizard
-	install -D -m644 ${srcdir}/dictionaries/diclst/DicOOo.sxw ${pkgdir}/opt/openoffice/share/dict/ooo/DicOOo.sxw
 
 	# link the mozilla-plugin
 	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
@@ -294,5 +293,4 @@ build() {
 	mv ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin.so ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin-beta.so
 	cd ${pkgdir}/opt/openoffice-beta/program/
 	ln -sf /opt/openoffice-beta/program/soffice.bin soffice-beta.bin
-	
 }
