@@ -1,3 +1,8 @@
+openoffice-base-beta 3.0-ooo300_m5-2
+- fixes desktop menu entries+icons
+- enable build of all dictionaries
+- deploy all built dicts in post.install
+
 openoffice-base-beta 3.0-ooo300_m5-1
 - next snapshot
 
